[gd_scene load_steps=7 format=3 uid="uid://cb8nbk8pmj0ru"]

[ext_resource type="Script" uid="uid://bqa16qt0gio6s" path="res://scenes/ui.gd" id="1_gdt2y"]
[ext_resource type="Texture2D" uid="uid://b0cw0ws8wb1fn" path="res://rock.png" id="1_nt7q6"]
[ext_resource type="Texture2D" uid="uid://b1lp08ewmupq3" path="res://paper.png" id="2_yev5y"]
[ext_resource type="Texture2D" uid="uid://dhayw288lkfrc" path="res://scissor.png" id="3_gdt2y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gdt2y"]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.05197095, 0.051970974, 0.051970884, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="LabelSettings" id="LabelSettings_gdt2y"]
font_size = 42
outline_size = 10
outline_color = Color(0.12225223, 0.12225223, 0.12225223, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_gdt2y")

[node name="BottomPanel" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(0, 50)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="StatsContainer" type="HBoxContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.006
anchor_top = 0.5
anchor_right = 0.006
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 91.0
offset_bottom = 20.0
grow_vertical = 2

[node name="RockPanel" type="PanelContainer" parent="BottomPanel/StatsContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="BottomPanel/StatsContainer/RockPanel"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="BottomPanel/StatsContainer/RockPanel/PanelContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("1_nt7q6")
expand_mode = 1
stretch_mode = 5

[node name="Rocks" type="Label" parent="BottomPanel/StatsContainer/RockPanel"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 8
text = ": 100"

[node name="PaperPanel" type="PanelContainer" parent="BottomPanel/StatsContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="BottomPanel/StatsContainer/PaperPanel"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="BottomPanel/StatsContainer/PaperPanel/PanelContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("2_yev5y")
expand_mode = 1
stretch_mode = 5

[node name="Papers" type="Label" parent="BottomPanel/StatsContainer/PaperPanel"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 8
text = ": 100"

[node name="ScissorPanel" type="PanelContainer" parent="BottomPanel/StatsContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="BottomPanel/StatsContainer/ScissorPanel"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="BottomPanel/StatsContainer/ScissorPanel/PanelContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("3_gdt2y")
expand_mode = 1
stretch_mode = 5

[node name="Scissors" type="Label" parent="BottomPanel/StatsContainer/ScissorPanel"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 8
text = ": 100"

[node name="ControlsContainer" type="HBoxContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -20.0
offset_right = 50.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="BottomPanel/ControlsContainer"]
layout_mode = 2
text = "Play"

[node name="PauseButton" type="Button" parent="BottomPanel/ControlsContainer"]
layout_mode = 2
text = "Pause"

[node name="AddContainer" type="Panel" parent="BottomPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.994
anchor_top = 0.5
anchor_right = 0.994
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="TypeButton" type="TextureButton" parent="BottomPanel/AddContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -20.0
offset_right = 16.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_nt7q6")
ignore_texture_size = true
stretch_mode = 0

[node name="GameOver" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.039215688, 0.039215688, 0.039215688, 0.24313726)

[node name="PanelContainer" type="PanelContainer" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.0
offset_top = -174.0
offset_right = 144.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gdt2y")

[node name="MarginContainer" type="MarginContainer" parent="GameOver/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GameOver/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SCISSOR WINS!"
label_settings = SubResource("LabelSettings_gdt2y")
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="GameOver/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="RestartButton" type="Button" parent="GameOver/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 56
text = "RESTART"

[node name="QuitButton" type="Button" parent="GameOver/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 64
text = "QUIT"

[node name="StartScreen" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.039215688, 0.039215688, 0.039215688, 0.24313726)

[node name="PanelContainer" type="PanelContainer" parent="StartScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -265.0
offset_top = -233.0
offset_right = 256.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gdt2y")

[node name="MarginContainer" type="MarginContainer" parent="StartScreen/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="StartScreen/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="StartScreen/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ROCK PAPER SCISSOR"
label_settings = SubResource("LabelSettings_gdt2y")
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="StartScreen/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="StartButton" type="Button" parent="StartScreen/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 56
text = "START"

[node name="QuitButton" type="Button" parent="StartScreen/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 64
text = "QUIT"

[connection signal="pressed" from="BottomPanel/ControlsContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="BottomPanel/ControlsContainer/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="BottomPanel/AddContainer/TypeButton" to="." method="_on_type_button_pressed"]
[connection signal="pressed" from="GameOver/PanelContainer/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOver/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="StartScreen/PanelContainer/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="StartScreen/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
